--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,46 @@
-Flask==2.0.3
-Werkzeug==2.0.3
+Flask==2.3.0
 Flask-Login==0.6.2
-Flask-WTF==1.0.1
-Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.1.1
+Flask-SQLAlchemy==3.0.5
 Flask-Bcrypt==1.0.1
+email-validator
+python-dotenv==1.0.0
+WTForms==3.0.0
+Werkzeug==2.3.0
+itsdangerous==2.1.2
+pymysql==1.1.0
+cryptography
+requests==2.31.0
+Flask-Limiter==3.5.0
+# Core Framework
+Flask==2.3.0
+Werkzeug==2.3.0
+
+# Database
+Flask-SQLAlchemy==3.0.5
+SQLAlchemy==2.0.21
+PyMySQL==1.1.0
+
+# Authentication & Security
+Flask-Login==0.6.2
+Flask-Bcrypt==1.0.1
+Flask-WTF==1.1.1
+WTForms==3.0.0
+itsdangerous==2.1.2
+Flask-Limiter==3.5.0
+
+# Email Support
 Flask-Mail==0.9.1
-Flask-Migrate==4.0.4
-Flask-Limiter==2.8.1
-SQLAlchemy==1.4.46
-pymysql==1.0.3
-cryptography==39.0.2
-WTForms==3.0.1
-email-validator==1.3.1
-python-dotenv==0.21.1
-itsdangerous==2.0.1
-markupsafe==2.0.1
-Jinja2==3.0.3
-requests==2.28.2
-alembic==1.10.4
-bcrypt==4.0.1
+
+# Environment Variables
+python-dotenv==1.0.0
+
+# Database Migrations
+Flask-Migrate==4.0.5
+
+# Production Server (optional)
+gunicorn==21.2.0
+
+# Testing (optional)
+pytest==7.4.0
+pytest-flask==1.2.0
